--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ body.dark-mode h1 {
 
 #csvFileInput:focus, #sortOrder:focus {
     outline: none;
-    border-color: #3498db;
+    border-color: #fff;
     box-shadow: 0 0 0 2px rgba(52, 152, 219, 0.2);
 }
 
