--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,7 @@ body.dark-mode #csvFileInput,
 body.dark-mode #sortOrder {
     background-color: #2c3e50;
     color: #ecf0f1;
+    border: 1px solid #3498db;
 }
 
 #filterContainer {
