--- a/styles.css
+++ b/styles.css
@@ -88,8 +88,7 @@ body.dark-mode #sortOrder {
 }
 
 body.dark-mode .card {
-    background-color: #1e1e1e;
-    box-shadow: 0 4px 6px rgba(255, 255, 255, 0.1);
+    background-color: #1C1C2A;
 }
 
 .card-title {
