--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ body.dark-mode #csvFileInput,
 body.dark-mode #sortOrder {
     background-color: #2c3e50;
     color: #ecf0f1;
-    border: 0.4px solid #3498db;
+    border: 0.5px solid #121217;
 }
 
 #filterContainer {
@@ -88,7 +88,7 @@ body.dark-mode #sortOrder {
 }
 
 body.dark-mode .card {
-    background-color: #4B4B4B;
+    background-color: ##2C2C2C;
 }
 
 .card-title {
