--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,7 @@ body.dark-mode #sortOrder {
 }
 
 body.dark-mode .card {
-    background-color: ##2C2C2C;
+    background-color: #2C2C2C;
 }
 
 .card-title {
