--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,7 @@ body.dark-mode #sortOrder {
     flex-direction: column;
     align-items: center;
     margin-bottom: 20px;
+    margin-top: 5px;
     width: 80%;
     max-width: 400px;
 }
@@ -193,7 +194,7 @@ label input[type="checkbox"] {
 }
 
 input:checked + .slider {
-    background-color: #3498db;
+    background-color: #FF0000;
 }
 
 input:checked + .slider:before {
@@ -217,7 +218,7 @@ input:checked + .slider:before {
 }
 
 .file-input-button {
-    background-color: #3498db;
+    background-color: #FF0000;
     color: white;
     padding: 10px 20px;
     border: none;
@@ -229,7 +230,7 @@ input:checked + .slider:before {
 }
 
 .file-input-button:hover {
-    background-color: #2980b9;
+    background-color: #FF0000;
     transform: translateY(-2px);
 }
 
