--- a/styles.css
+++ b/styles.css
@@ -239,11 +239,11 @@ input:checked + .slider:before {
 }
 
 body.dark-mode .file-input-button {
-    background-color: #2c3e50;
+    background-color: #FF0000;
 }
 
 body.dark-mode .file-input-button:hover {
-    background-color: #34495e;
+    background-color: #FF0000;
 }
 
 @media (max-width: 600px) {
