--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ body.dark-mode h1 {
     color: #ffffff;
 }
 
-#csvFileInput, #sortOrder {
+#csvFileInput, #sortOrder, #sortViews {
     padding: 12px;
     margin-bottom: 20px;
     border-radius: 5px;
@@ -40,12 +40,13 @@ body.dark-mode h1 {
     background-color: #fff;
 }
 
-#csvFileInput:focus, #sortOrder:focus {
+#csvFileInput:focus, #sortOrder:focus, #sortViews:focus {
     outline: none;
 }
 
 body.dark-mode #csvFileInput,
-body.dark-mode #sortOrder {
+body.dark-mode #sortOrder,
+body.dark-mode #sortViews {
     background-color: #2c3e50;
     color: #ecf0f1;
     border: 0.5px solid #121217;
@@ -244,6 +245,33 @@ body.dark-mode .file-input-button {
 
 body.dark-mode .file-input-button:hover {
     background-color: #FF0000;
+}
+
+#statsContainer {
+    background-color: #fff;
+    padding: 10px;
+    border-radius: 5px;
+    margin-bottom: 20px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease;
+    width: 100%;
+    max-width: 400px;
+    text-align: center;
+}
+
+body.dark-mode #statsContainer {
+    background-color: #2C2C2C;
+    color: #e0e0e0;
+}
+
+#statsContainer.sticky {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+    border-radius: 0;
+    max-width: 100%;
 }
 
 @media (max-width: 600px) {
