--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ body.dark-mode h1 {
     color: #ffffff;
 }
 
-#csvFileInput, #sortOrder, #sortViews {
+#csvFileInput, #sortOrder {
     padding: 12px;
     margin-bottom: 20px;
     border-radius: 5px;
@@ -40,13 +40,12 @@ body.dark-mode h1 {
     background-color: #fff;
 }
 
-#csvFileInput:focus, #sortOrder:focus, #sortViews:focus {
+#csvFileInput:focus, #sortOrder:focus {
     outline: none;
 }
 
 body.dark-mode #csvFileInput,
-body.dark-mode #sortOrder,
-body.dark-mode #sortViews {
+body.dark-mode #sortOrder {
     background-color: #2c3e50;
     color: #ecf0f1;
     border: 0.5px solid #121217;
@@ -247,31 +246,31 @@ body.dark-mode .file-input-button:hover {
     background-color: #FF0000;
 }
 
-#statsContainer {
-    background-color: #fff;
-    padding: 10px;
-    border-radius: 5px;
+#statisticsContainer {
+    background-color: #2c3e50;
+    color: #ecf0f1;
+    padding: 15px;
+    border-radius: 8px;
     margin-bottom: 20px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    transition: all 0.3s ease;
-    width: 100%;
-    max-width: 400px;
     text-align: center;
+    display: flex;
+    justify-content: space-around;
+    max-width: 400px;
+    width: 100%;
 }
 
-body.dark-mode #statsContainer {
-    background-color: #2C2C2C;
-    color: #e0e0e0;
+body.dark-mode #statisticsContainer {
+    background-color: #34495e;
 }
 
-#statsContainer.sticky {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 1000;
-    border-radius: 0;
-    max-width: 100%;
+#statisticsContainer p {
+    margin: 0;
+    font-size: 0.9em;
+}
+
+#statisticsContainer span {
+    font-weight: bold;
+    font-size: 1.1em;
 }
 
 @media (max-width: 600px) {
