--- a/styles.css
+++ b/styles.css
@@ -20,8 +20,8 @@ body.dark-mode {
 h1 {
     color: #2c3e50;
     font-size: 2.5em;
-    margin-top: 70px;
-    margin-bottom: 43px;
+    margin-top: 60px;
+    margin-bottom: 20px;
     text-align: center;
 }
 
@@ -239,6 +239,7 @@ input:checked + .slider:before {
 }
 
 body.dark-mode .file-input-button {
+    color: white;
     background-color: #FF0000;
 }
 
@@ -249,9 +250,7 @@ body.dark-mode .file-input-button:hover {
 #statisticsContainer {
     background-color: #2c3e50;
     color: #ecf0f1;
-    padding: 15px;
-    border-radius: 8px;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
     text-align: center;
     display: flex;
     justify-content: space-around;
