--- a/styles.css
+++ b/styles.css
@@ -250,10 +250,13 @@ body.dark-mode .file-input-button:hover {
 #statisticsContainer {
     background-color: #2c3e50;
     color: #ecf0f1;
-    margin-bottom: 15px;
+    padding: 0px;
+    border-radius: 1px;
+    margin-bottom: 20px;
     text-align: center;
     display: flex;
     justify-content: space-around;
+    max-width: 400px;
     width: 100%;
     transition: position 0.3s, top 0.3s;
 }
