--- a/styles.css
+++ b/styles.css
@@ -244,14 +244,15 @@ body.dark-mode .file-input-button {
 }
 
 body.dark-mode .file-input-button:hover {
+    color: white;
     background-color: #FF0000;
 }
 
 #statisticsContainer {
     background-color: #2c3e50;
     color: #ecf0f1;
-    padding: 0px;
-    border-radius: 1px;
+    padding: 20px;
+    border-radius: 8px;
     margin-bottom: 20px;
     text-align: center;
     display: flex;
