--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ body.dark-mode {
 h1 {
     color: #2c3e50;
     font-size: 2.5em;
-    margin-top: 60px;
+    margin-top: 50px;
     margin-bottom: 20px;
     text-align: center;
 }
@@ -248,19 +248,18 @@ body.dark-mode .file-input-button:hover {
     background-color: #FF0000;
 }
 
-/* Statistics Container Styles */
 #statisticsContainer {
-    background-color: #2c3e50;
-    color: #ecf0f1;
-    padding: 20px;
-    border-radius: 8px;
-    margin-bottom: 20px;
+    background-color: #000000;
+    color: #ffffff;
+    padding: 5px;
+    border-radius: 5px;
+    margin-bottom: 10px;
     text-align: center;
     display: flex;
     justify-content: space-around;
     max-width: 400px;
     width: 100%;
-    transition: position 0.3s, top 0.3s, transform 0.3s;
+    transition: position 0.3s, top 0.3s;
 }
 
 #statisticsContainer.sticky {
@@ -270,8 +269,6 @@ body.dark-mode .file-input-button:hover {
     transform: translateX(-50%);
     z-index: 1000;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    max-width: 100%;
-    width: 90%;
 }
 
 body.dark-mode #statisticsContainer {
@@ -304,7 +301,5 @@ body.dark-mode #statisticsContainer {
 
     #statisticsContainer {
         max-width: 90%;
-        padding: 15px;
-        flex-direction: column;
     }
 }
