--- a/styles.css
+++ b/styles.css
@@ -249,11 +249,11 @@ body.dark-mode .file-input-button:hover {
 }
 
 #statisticsContainer {
-    background-color: #000000;
-    color: #ffffff;
+    background-color: #2c3e50;
+    color: #ecf0f1;
     padding: 5px;
-    border-radius: 5px;
-    margin-bottom: 10px;
+    border-radius: 0px;
+    margin-bottom: 0px;
     text-align: center;
     display: flex;
     justify-content: space-around;
@@ -300,6 +300,6 @@ body.dark-mode #statisticsContainer {
     }
 
     #statisticsContainer {
-        max-width: 90%;
+        max-width: 100%;
     }
 }
