--- a/styles.css
+++ b/styles.css
@@ -253,7 +253,7 @@ body.dark-mode .file-input-button:hover {
     color: #ecf0f1;
     padding: 5px;
     border-radius: 0px;
-    margin-bottom: 0px;
+    margin-bottom: 10px;
     text-align: center;
     display: flex;
     justify-content: space-around;
@@ -265,6 +265,7 @@ body.dark-mode .file-input-button:hover {
 #statisticsContainer.sticky {
     position: fixed;
     top: 0;
+    bottom: 10;
     left: 50%;
     transform: translateX(-50%);
     z-index: 1000;
