--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ body.dark-mode {
 h1 {
     color: #2c3e50;
     font-size: 2.5em;
-    margin-top: 50px;
+    margin-top: 20px;
     margin-bottom: 20px;
     text-align: center;
 }
@@ -153,7 +153,8 @@ label input[type="checkbox"] {
 
 .theme-switch-wrapper {
     position: absolute;
-    top: 5px;
+    margin-top: 20px;
+    margin-bottom: 10px;
     right: 20px;
     display: flex;
     align-items: center;
@@ -265,6 +266,7 @@ body.dark-mode .file-input-button:hover {
 #statisticsContainer.sticky {
     position: fixed;
     top: 0;
+    bottom: 20;
     left: 50%;
     transform: translateX(-50%);
     z-index: 1000;
