--- a/styles.css
+++ b/styles.css
@@ -153,6 +153,8 @@ label input[type="checkbox"] {
 
 .theme-switch-wrapper {
     position: absolute;
+    top: 20px;
+    bottom: 20px;
     right: 20px;
     display: flex;
     align-items: center;
@@ -252,7 +254,6 @@ body.dark-mode .file-input-button:hover {
     color: #2c3e50;
     padding: 5px;
     border-radius: 0px;
-    margin-bottom: 25px;
     text-align: center;
     display: flex;
     justify-content: space-around;
@@ -264,7 +265,6 @@ body.dark-mode .file-input-button:hover {
 #statisticsContainer.sticky {
     position: fixed;
     top: 0;
-    bottom: 20;
     left: 50%;
     transform: translateX(-50%);
     z-index: 1000;
