--- a/styles.css
+++ b/styles.css
@@ -153,6 +153,7 @@ label input[type="checkbox"] {
 
 .theme-switch-wrapper {
     position: absolute;
+    top: 15;
     right: 20px;
     display: flex;
     align-items: center;
