--- a/styles.css
+++ b/styles.css
@@ -153,7 +153,6 @@ label input[type="checkbox"] {
 
 .theme-switch-wrapper {
     position: absolute;
-    top: 15;
     right: 20px;
     display: flex;
     align-items: center;
@@ -264,6 +263,7 @@ body.dark-mode .file-input-button:hover {
 #statisticsContainer.sticky {
     position: fixed;
     top: 0;
+    margin-bottom: 20px;
     left: 50%;
     transform: translateX(-50%);
     z-index: 1000;
